# rom

./: Cargo.toml
.monad/: graph.json  index.json
crates/monad-repo-artifacts/: Cargo.toml
crates/monad-repo-artifacts/src/: lib.rs
crates/monad-repo-cli/: Cargo.toml
crates/monad-repo-cli/src/: main.rs
crates/monad-repo-cli/tests/: cli.rs
crates/monad-repo-discovery/: Cargo.toml
crates/monad-repo-discovery/src/: lib.rs
crates/monad-repo-model/: Cargo.toml
crates/monad-repo-model/src/: lib.rs
docs/: 00-index.md
docs/architecture/: repository-object-model.md
docs/planning/: 0000-idea.md  0001-exploration-brief.md
docs/product/: repository-control-plane-exploration-brief.md
docs/work-packets/: WP-0001-repository-object-model-exploration-and-static-resource-discovery.md
