[package]
name = "monad-repo-artifacts"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Generated repository control plane artifacts for Monad OS"

[dependencies]
serde = { version = "1", features = ["derive"] }
monad-repo-model = { path = "../monad-repo-model" }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
